--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
     url: jdbc:mysql://localhost:3306/security?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
+  security:
+    user:
+      name: admin  # ??? ??? ??
+      password: yourpassword  # ??? ????
+
 
   mvc:
     view:
@@ -25,3 +30,7 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+
+logging:
+  level:
+    org.springframework.security: INFO
